<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
 	 android:layout_width="fill_parent"
  	android:layout_height="fill_parent">
    
 	<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/imagesaturn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/saturn" />
    
    <TextView
        android:id="@+id/saturntitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25dip"
        android:textStyle="bold"
        android:text="@string/saturntitle"/>
    
    <TextView
        android:id="@+id/saturn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="5dip"
        android:textSize="10dip"
        android:text="@string/saturndescription"
         />

    <TextView
        android:id="@+id/saturnbullet"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="5dip"
        android:textSize="10dip"
        android:text="@string/saturnbullet"
         />
    	
    <Button
        android:id="@+id/btnClose"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dip"
        android:text="Back" />

	</LinearLayout>
</ScrollView>