<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
 	 android:layout_width="fill_parent"
  	android:layout_height="fill_parent">
    
 	<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/imagemercury"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/mercury" />
    
    <TextView
        android:id="@+id/mercurytitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25dip"
        android:textStyle="bold"
        android:text="@string/mercurytitle"/>
    
    <TextView
        android:id="@+id/mercury"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="5dip"
        android:textSize="10dip"
        android:text="@string/mercurydescription"
         />

    <TextView
        android:id="@+id/mercurybullet"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="5dip"
        android:textSize="10dip"
        android:text="@string/mercurybullet"
         />
    	
    <Button
        android:id="@+id/btnClose"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dip"
        android:text="Back" />

	</LinearLayout>
</ScrollView>